<resources>
    <string name="app_name">一起來記帳</string>
    <string name="signup">註冊</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="register_success">註冊成功</string>
    <string name="logout">登出</string>
    <string name="login_success">登入成功</string>
    <string name="date">選擇日期</string>
    <string name="save_send">記帳</string>
    <string name="show_detail">顯示詳細資料</string>
    <string name="out_name">暱稱:</string>
    <string name="out_spend">花費:</string>
    <string name="out_date">日期:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="list">

        <item>ALL</item>
        <item>飲食</item>
        <item>娛樂</item>
        <item>日用品</item>
        <item>文具</item>
        <item>交通</item>
        <item>請選擇類別</item>
    </string-array>

    <string-array name="list_home">
        <item>飲食</item>
        <item>娛樂</item>
        <item>日用品</item>
        <item>文具</item>
        <item>交通</item>
    </string-array>

    <string-array name="list_savemoney">

        <item>ALL</item>
        <item>薪水</item>
        <item>零用錢</item>
        <item>中獎</item>
        <item>其他</item>
        <item>請選擇類別</item>
    </string-array>

    <string-array name="list_savemoney_home">
        <item>薪水</item>
        <item>零用錢</item>
        <item>中獎</item>
        <item>其他</item>
    </string-array>
</resources>
